--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -51,8 +51,8 @@ battery 0 {
     threshold_type = percentage
     hide_seconds = true
     status_chr = " "
-    status_bat = " "
-    status_full = " "
+    status_bat = " "
+    status_full = " "
 }
 
 run_watch DHCP {
