Config for qutebrowser added.

--- a/qutebrowser/keys.conf
+++ b/qutebrowser/keys.conf
@@ -50,6 +50,7 @@ set-cmd-text :open {url}
 
 set-cmd-text -s :open -t
     O
+    t
 
 set-cmd-text :open -t {url}
     gO
@@ -90,11 +91,11 @@ tab-move
 
 tab-move -
     gl
-	<Ctrl-Left>
+    <Ctrl-Left>
 
 tab-move +
     gr
-	<Ctrl-Right>
+    <Ctrl-Right>
 
 tab-prev
     K
@@ -291,13 +292,18 @@ set-cmd-text -s :set -t
 set-cmd-text -s :set keybind
     sk
 
+set-cmd-text -s :restart
+    <Ctrl+R>
+
 zoom-out
     -
     zo
+    <Ctrl+PgDown>
 
 zoom-in
     +
     zi
+    <Ctrl+PgUp>
 
 zoom
     =
@@ -400,6 +406,7 @@ print
 
 open qute:settings
     Ss
+    SS
 
 follow-selected
     <Return>
