--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -253,6 +253,7 @@ session-default-name =
 #     * `{title_sep}`: The string ` - ` if a title is set, empty
 #     otherwise.
 #     * `{id}`: The internal window ID of this window.
+#     * `{scroll_pos}`: The page scroll position.
 #     Default: {perc}{title}{title_sep}qutebrowser
 #
 # hide-mouse-cursor (Bool):
@@ -262,6 +263,11 @@ session-default-name =
 #
 # modal-js-dialog (Bool):
 #     Use standard JavaScript modal dialog for alert() and confirm()
+#     Valid values: true, false
+#     Default: false
+#
+# hide-wayland-decoration (Bool):
+#     Hide the window decoration when using wayland (requires restart)
 #     Valid values: true, false
 #     Default: false
 zoom-levels = 25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
@@ -282,6 +288,7 @@ statusbar-padding = 1,1,0,0
 window-title-format = {perc}{title}{title_sep}qutebrowser
 hide-mouse-cursor = false
 modal-js-dialog = false
+hide-wayland-decoration = false
 
 [network]
 # Settings related to the network.
@@ -575,6 +582,7 @@ mouse-zoom-divider = 512
 #     otherwise.
 #     * `{index}`: The index of this tab.
 #     * `{id}`: The internal tab ID of this tab.
+#     * `{scroll_pos}`: The page scroll position.
 #     Default: {index}: {title}
 #
 # mousewheel-tab-switching (Bool):
@@ -805,6 +813,14 @@ cache-size = 52428800
 #     Whether host blocking is enabled.
 #     Valid values: true, false
 #     Default: true
+#
+# host-blocking-whitelist (List):
+#     List of domains that should always be loaded, despite being
+#     ad-blocked.
+#     Domains may contain * and ? wildcards and are otherwise required
+#     to exactly match the requested domain.
+#     Local domains are always exempt from hostblocking.
+#     Default: piwik.org
 allow-images = true
 allow-javascript = true
 allow-plugins = true
@@ -824,6 +840,7 @@ cookies-accept = no-3rdparty
 cookies-store = true
 host-block-lists = http://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,http://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
 host-blocking-enabled = true
+host-blocking-whitelist = piwik.org
 
 [hints]
 # Hinting settings.
@@ -1071,13 +1088,21 @@ aur = open http://www.aur.archlinux.org
 #     Background color of unselected even tabs.
 #     Default: darkgrey
 #
-# tabs.fg.selected (QtColor):
-#     Foreground color of selected tabs.
+# tabs.fg.selected.odd (QtColor):
+#     Foreground color of selected odd tabs.
 #     Default: white
 #
-# tabs.bg.selected (QtColor):
-#     Background color of selected tabs.
+# tabs.bg.selected.odd (QtColor):
+#     Background color of selected odd tabs.
 #     Default: black
+#
+# tabs.fg.selected.even (QtColor):
+#     Foreground color of selected even tabs.
+#     Default: ${tabs.fg.selected.odd}
+#
+# tabs.bg.selected.even (QtColor):
+#     Background color of selected even tabs.
+#     Default: ${tabs.bg.selected.odd}
 #
 # tabs.bg.bar (QtColor):
 #     Background color of the tab bar.
@@ -1199,8 +1224,10 @@ tabs.fg.odd = white
 tabs.bg.odd = grey
 tabs.fg.even = white
 tabs.bg.even = darkgrey
-tabs.fg.selected = white
-tabs.bg.selected = black
+tabs.fg.selected.odd = white
+tabs.bg.selected.odd = black
+tabs.fg.selected.even = ${tabs.fg.selected.odd}
+tabs.bg.selected.even = ${tabs.bg.selected.odd}
 tabs.bg.bar = #555555
 tabs.indicator.start = #0000aa
 tabs.indicator.stop = #00aa00
