--- a/etc/locale.conf
+++ b/etc/locale.conf
@@ -5,22 +5,22 @@
 LANG="en_IE.UTF-8"
 
 # define fallback languages
-LANGUAGE="en_IE:en_US:en"
+#LANGUAGE="en_IE:en_US:en"
 
-LC_CTYPE="en_IE.UTF-8"
-LC_NUMERIC="en_IE.UTF-8"
-LC_TIME="de_CH.UTF-8"
-
-# Keep the default sort order (e.g. files starting with a '.'
-# should appear at the start of a directory listing.)
-LC_COLLATE="C"
-LC_MONETARY="de_CH.UTF-8"
-LC_MESSAGES="en_US.UTF-8"
-LC_PAPER="de_CH.UTF-8"
-LC_NAME="de_CH.UTF-8"
-LC_ADDRESS="de_CH.UTF-8"
-LC_TELEPHONE="de_CH.UTF-8"
-LC_MEASUREMENT="de_CH.UTF-8"
-LC_IDENTIFICATION="de_CH.UTF-8"
-# LC_ALL= -> cannot be set in /etc/locale.conf
+#LC_CTYPE="en_IE.UTF-8"
+#LC_NUMERIC="en_IE.UTF-8"
+#LC_TIME="de_CH.UTF-8"
+#
+## Keep the default sort order (e.g. files starting with a '.'
+## should appear at the start of a directory listing.)
+#LC_COLLATE="C"
+#LC_MONETARY="de_CH.UTF-8"
+#LC_MESSAGES="en_US.UTF-8"
+#LC_PAPER="de_CH.UTF-8"
+#LC_NAME="de_CH.UTF-8"
+#LC_ADDRESS="de_CH.UTF-8"
+#LC_TELEPHONE="de_CH.UTF-8"
+#LC_MEASUREMENT="de_CH.UTF-8"
+#LC_IDENTIFICATION="de_CH.UTF-8"
+## LC_ALL= -> cannot be set in /etc/locale.conf
 
