Qutebrowser: Added more bookmarks.

--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -601,7 +601,7 @@ background-tabs = true
 select-on-remove = previous
 new-tab-position = right
 new-tab-position-explicit = last
-last-close = close
+last-close = startpage
 show = always
 show-switching-delay = 800
 wrap = true
