Use ISO version for weeknumber starting at 1.

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -9,11 +9,11 @@
 ###############################################################################
 
 general {
-    colors = true
+    interval 		= 1
+    colors 			= true
     color_good      = '#88b090'
     color_degraded  = '#ccdc90'
     color_bad       = '#e89393'
-    interval = 1
     #separator_block_width = 25
 }
 
@@ -64,7 +64,7 @@ run_watch VPN {
 }
 
 tztime local {
-    format = " %W %A %e.%B  %H:%M:%S"
+    format = " %V %A %e.%B  %H:%M:%S"
 }
 
 load {
