Try to hide shadows on some windows.

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,3 +1,16 @@
+#Shadows
+#shadow-exclude = [ "class_g = 'i3-frame'" ];
+#shadow-exclude = [ "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
+shadow-exclude = [ 
+	"class_g = 'i3-frame'",
+	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
+opacity-rule = [
+  "93:class_g = 'URxvt' && !_NET_WM_STATE@:32a",
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "75:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'"
+];
+
 backend = "glx"
 glx-no-stencil = true
 #glx-copy-from-front = false
