--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -279,7 +279,8 @@ confirm-quit = never
 display-statusbar-messages = false
 zoom-text-only = false
 frame-flattening = false
-user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
+#user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
+user-stylesheet = ~/.config/qutebrowser/stylesheets/light.css
 css-media-type = 
 smooth-scrolling = true
 remove-finished-downloads = false
