Make i3bar solid

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -20,6 +20,7 @@ shadow-offset-y = -7;
 shadow-opacity = 0.9;
 
 # shadow colors
+# rgb(0, 60, 1)
 shadow-red = 0.0;
 shadow-green = 0.6;
 shadow-blue = 0.1;
@@ -155,11 +156,6 @@ wintypes:
         opacity = 0.75;
         # focus: Whether to always consider windows of this type focused.
         focus = true;
-    };
-
-    dock =
-    {
-        opacity = 0.6;
     };
 };
 
