--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -14,7 +14,6 @@ general {
     color_good      = '#88b090'
     color_degraded  = '#ccdc90'
     color_bad       = '#e89393'
-    #separator_block_width = 25
 }
 
 order += "volume master"
@@ -81,6 +80,7 @@ format = " %degrees°C"
 
 disk "/home" {
     format = " %free"
+	prefix_type	= custom
 }
 
 volume master {
