--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -63,7 +63,7 @@ run_watch VPN {
 }
 
 tztime local {
-    format = " %V %A %e.%B  %H:%M:%S"
+    format = " %V %A %e.%B   %H:%M:%S"
 }
 
 load {
@@ -75,7 +75,7 @@ cpu_usage {
 }
 
 cpu_temperature 0 {
-format = " %degrees°C"
+format = " %degrees°C"
 }
 
 disk "/home" {
