--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -31,7 +31,7 @@ order += "load"
 order += "tztime local"
 
 wireless wlp4s0 {
-    format_up = " %quality %essid %ip"
+    format_up = "%quality  %essid %ip"
     format_down = ""
 }
 
@@ -63,7 +63,7 @@ run_watch VPN {
 }
 
 tztime local {
-    format = " %V %A %e.%B   %H:%M:%S"
+    format = "%V  %A %e.%B   %H:%M:%S"
 }
 
 load {
